<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context="in.example.deb.mdapp.view.activity.login.LogInActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/splash_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="50dp"
        android:id="@+id/layoutRegistration"
        android:paddingRight="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">
        <EditText
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/Address"
            android:inputType="textPostalAddress"
            android:gravity="center"
            android:background="@drawable/loginbuttonstyle"
            android:id="@+id/EditTextAddress"/>
        <EditText
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/City"
            android:gravity="center"
            android:background="@drawable/loginbuttonstyle"
            android:id="@+id/EditTextCity"
            android:inputType="text"
            android:layout_below="@+id/EditTextAddress"/>

        <EditText
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/State"
            android:gravity="center"
            android:background="@drawable/loginbuttonstyle"
            android:id="@+id/EditTextState"
            android:inputType="text"
            android:layout_below="@+id/EditTextCity"/>

        <EditText
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/pincode"
            android:gravity="center"
            android:background="@drawable/loginbuttonstyle"
            android:id="@+id/EditTextPincode"
            android:inputType="number"
            android:layout_below="@+id/EditTextState"/>

        <EditText
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/Country"
            android:gravity="center"
            android:background="@drawable/loginbuttonstyle"
            android:id="@+id/EditTextCountry"
            android:inputType="text"
            android:layout_below="@+id/EditTextPincode"/>

        <Button
            android:onClick="SignUpNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UpdateInfo"
            android:textAllCaps="false"
            android:id="@+id/buttonSignupNow"
            android:layout_below="@+id/EditTextCountry"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:background="@drawable/splashbuttonstyle"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

    </RelativeLayout>
</RelativeLayout>
