<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context="in.example.deb.mdapp.view.activity.login.LogInActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/splash_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="50dp"
        android:id="@+id/layoutLogin"
        android:paddingRight="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">
        <EditText
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:background="@drawable/loginbuttonstyle"
            android:id="@+id/EditTextEmail"/>
        <EditText
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:gravity="center"
            android:background="@drawable/loginbuttonstyle"
            android:id="@+id/EditTextPassword"
            android:inputType="textPassword"
            android:layout_below="@+id/EditTextEmail"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/LinearLayoutforgotPassword"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_below="@+id/EditTextPassword">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="26px"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:text="@string/forgot_password"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="26px"
                android:gravity="right"
                android:textColor="@color/colorAccent"
                android:text="@string/click_here"/>

        </LinearLayout>
        <Button
            android:onClick="SigninNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_now"
            android:textAllCaps="false"
            android:id="@+id/buttonSigninNow"
            android:layout_below="@+id/LinearLayoutforgotPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:background="@drawable/splashbuttonstyle"
            android:textColor="#ffffff"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/buttonSigninNow"
            android:text="@string/Signup"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="26px"/>

    </RelativeLayout>
</RelativeLayout>
